tests/expectations/compiler/const_prop/core_functions.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:9:13
     |
   9 |             BHP512::hash_to_field(1234567u128),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:10:13
     |
  10 |             BHP512::hash_to_field(12field),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:13:13
     |
  13 |             BHP512::hash_to_group(12u32),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:14:13
     |
  14 |             BHP512::hash_to_group(123123scalar),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:17:13
     |
  17 |             BHP512::hash_to_u32(98765field),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:18:33
     |
  18 |             BHP512::hash_to_u32(BHP512::hash_to_group(168field)),
     |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:18:13
     |
  18 |             BHP512::hash_to_u32(BHP512::hash_to_group(168field)),
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
